--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -9,6 +9,6 @@ CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # CONFIG_ZMK_USB_LOGGING=y
-CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=10
-CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=50
+# CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=10
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
